# py-glabels

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
glabels/: __init__.py  _base.py  glabels_3.py  glabels_qt.py
