[metadata]
name = glabels
version = 0.1.3
author = Nureev Insaf
author_email = uneenymain@gmail.com
description = Simple wrapper around glabels-3-batch and glabels-batch-qt
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
